<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ciayiti.speed.MainActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="@color/blanc"
        android:layout_alignStart="@+id/spinner"
        android:layout_marginBottom="174dp"
        android:text="@string/prix"
        android:layout_alignLeft="@+id/spinner" />

    <Spinner
        android:id="@+id/Type_vehi"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/prix_course"
        android:layout_marginTop="185dp"
        android:layout_alignLeft="@+id/prix_course" />

    <EditText
        android:id="@+id/prix_course"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/textView8"
        android:ems="10"
        android:inputType="number"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/textView8" />

    <EditText
        android:id="@+id/capacite"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Type_vehi"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="number"
        android:layout_alignLeft="@+id/Type_vehi" />

    <Button
        android:id="@+id/trajet"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/trajet" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="134dp"
        android:spinnerMode="dialog" />

    <Button
        android:id="@+id/Deconnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="11dp"
        android:text="Deconnexion"
        tools:text="@string/deconnexion"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/labeligne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="99dp"
        android:text="@string/ligne"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/blanc"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/capacite"
        android:textColor="@color/blanc"
        android:layout_alignStart="@+id/textView8"
        android:text="@string/capacite"
        android:layout_alignLeft="@+id/textView8" />

    <TextView
        android:id="@+id/textype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/spinner"
        android:textColor="@color/blanc"
        android:layout_alignTop="@+id/Type_vehi"
        android:text="@string/typevehi"
        android:layout_alignLeft="@+id/spinner" />

    <EditText
        android:id="@+id/nom_chauffeur"
        android:textColor="#fff"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView8"
        android:layout_marginBottom="97dp"
        android:ems="10"
        android:hint="@string/chauffeur"
        android:inputType="textPersonName"
        android:layout_alignLeft="@+id/textView8" />

</RelativeLayout>
